images not showing has been fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 }
 @font-face {
     font-family: 'Inter';
-    src: url('/assets/fonts/Inter-VariableFont_slnt\,wght.ttf');
+    src: url('assets/fonts/Inter-VariableFont_slnt\,wght.ttf');
 }
 :root{
     /* primary colours */
